packages/react/src/components/List/List.css
.h-List {
  display: flex;
  flex-direction: column;
  gap: var(--h-list-gap);
  width: 100%;

  & :where(.h-ListContainer) {
    &:where(:has(:focus-visible)) {
      outline: none;
    }

    & :where(ul, ol) {
      width: 100%;
    }
  }

  & :where(.h-ListItem) {
    display: flex;
    flex-direction: row;
    gap: var(--h-space-300);
    align-items: center;
    position: relative;
    padding: var(--h-list-item-functional-padding);

    &:where(.h-ListContainer[data-padding-none]:not(.h-Card) &) {
      padding-inline: var(--h-space-0);
    }

    &:where(.h-variant-subtle, .h-variant-emphasis) & {
      &:where(:first-child) {
        border-top-left-radius: var(--h-card-border-radius);
        border-top-right-radius: var(--h-card-border-radius);
      }

      &:where(:last-child) {
        border-bottom-left-radius: var(--h-card-border-radius);
        border-bottom-right-radius: var(--h-card-border-radius);
      }
    }

    &:where(:not(:first-child)) {
      border-top: var(--h-list-item-functional-border-width) solid;
      border-color: var(--h-border-subtle);
    }

    :where(.h-variant-subtle) & {
      border-color: var(--h-border-subtle);
    }

    :where(.h-variant-emphasis) & {
      border-color: var(--h-border-strong);
    }

    &:has(button, a):not(:has(.h-Switch), :has(.h-Link)) {
      @media (hover: hover) {
        &:where(:hover) {
          background-color: var(--h-interactive-neutral-surface-subtle-hover);
        }
      }

      &:where(:active) {
        background-color: var(--h-interactive-neutral-surface-subtle-active);
      }
    }

    & :where(.h-ListItemButton, .h-ListActionButton) {
      all: unset;
      outline: transparent;
      appearance: none;
      box-sizing: border-box;

      & :where(.h-ListItemContent) {
        width: 100%;
      }
    }

    & :where(.h-ListItemLink, .h-ListActionLink) {
      color: inherit;
      font: inherit;
      text-decoration: none;
    }

    & :where(.h-ListActionLink, .h-ListActionButton) {
      cursor: pointer;
      width: 100%;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      gap: var(--h-list-item-gap);

      &::after {
        z-index: 0;
        content: '';
        position: absolute;
        inset: 0;
      }

      &:where(:focus-visible) {
        outline: 2px solid var(--h-focus-primary);
        outline-offset: 1px;
      }
    }

    & :where(.h-ListItemButton, .h-ListItemLink) {
      cursor: pointer;
      width: 100%;
      display: flex;
      flex-direction: row;
      gap: var(--h-list-item-gap);
      align-items: center;

      &::after {
        z-index: 0;
        content: '';
        position: absolute;
        inset: 0;
      }

      &:where(:focus-visible) {
        outline: 2px solid var(--h-focus-primary);
        outline-offset: 1px;
      }
    }

    & :where(.h-ListItemContent) {
      width: 100%;
      display: flex;
      gap: var(--h-list-item-gap);
      align-items: stretch;

      & :where(.h-ListItemContentTrailingContent) {
        display: flex;
        align-items: center;
        justify-content: end;

        &:has(> .h-Switch, > .h-Link) {
          align-items: start;
        }
      }
    }
  }
}

